--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "eslint": "^7.14.0",
     "init": "^0.1.2",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {},
   "scripts": {
